--- a/packages/enzyme-adapter-react-16/package.json
+++ b/packages/enzyme-adapter-react-16/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enzyme-adapter-react-16",
-  "version": "1.1.1",
+  "version": "1.1.1-rm.2",
   "description": "JavaScript Testing utilities for React",
   "homepage": "http://airbnb.io/enzyme/",
   "main": "build",
@@ -34,7 +34,7 @@
   "author": "Leland Richardson <leland.richardson@airbnb.com>",
   "license": "MIT",
   "dependencies": {
-    "enzyme-adapter-utils": "^1.3.0",
+    "enzyme-adapter-utils": "1.3.0-rm.1",
     "lodash": "^4.17.4",
     "object.assign": "^4.1.0",
     "object.values": "^1.0.4",
