--- a/packages/enzyme/package.json
+++ b/packages/enzyme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enzyme",
-  "version": "3.3.0-rm1",
+  "version": "3.3.0-rm.1",
   "description": "JavaScript Testing utilities for React",
   "homepage": "http://airbnb.io/enzyme/",
   "main": "build",
